1.增加zookeeper分布式应用协调服务 2.添加dubbo分布式应用框架

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,7 @@
 
     <!--改为guzz启动监听-->
     <listener>
-        <listener-class>
-            org.guzz.web.context.spring.GuzzWithSpringContextLoaderListener
-        </listener-class>
+        <listener-class>org.guzz.web.context.spring.GuzzWithSpringContextLoaderListener</listener-class>
     </listener>
 
     <!--转码过滤器-->
