--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
         <spring.version>4.2.0.RELEASE</spring.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>jdb-dev</id>
-            <name>JDB Maven Repository</name>
-            <url>http://mvn.jdb-dev.com/content/groups/public</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>jdb-dev</id>-->
+            <!--<name>JDB Maven Repository</name>-->
+            <!--<url>http://mvn.jdb-dev.com/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
     <dependencies>
 
@@ -475,6 +475,12 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
             <version>0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>3.6.2</version>
         </dependency>
 
     </dependencies>
