--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 ### set log levels ###
 log4j.rootLogger =info,stdout,D,W,E
-log4j.logger.com.liukai.myguzz = info,stdout
+#log4j.logger.com.liukai.myguzz = info,stdout
 
 ### \u8F93\u51FA\u5230\u63A7\u5236\u53F0 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
